# fast-short-url

./: LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: a714f0611fa9_create_short_links_table.py  d52bbc225153_add_expires_at_to_short_links.py  fb6b6deec18d_create_short_links.py
app/: cleanup.py  config.py  db.py  init_db.py  main.py  models.py  services.py  utils.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts  style.css
frontend/src/components/: PixelCat.vue  TerminalPrompt.vue  TerminalView.vue
frontend/src/terminal/: commandSpecs.ts  commands.ts  helpMap.ts  helpers.ts  useCursor.ts  useHistory.ts  useTerminalLines.ts  useTyping.ts
frontend/src/types/: terminal.ts
tests/: conftest.py  test_shortener.py
