[project]
name = "fast-short-url"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.3",
    "alembic>=1.17",
    "pydantic>=2.12",
    "pydantic-settings>=2.12",
    "python-dotenv>=1.2",
]

[project.optional-dependencies]
dev = [
    "fastapi[standard]>=0.128.0",
    "pytest>=9.0",
    "httpx>=0.28",
    "ruff>=0.14",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
pythonpath = ["."]
